--- a/app/views/doubts/edit.html.erb
+++ b/app/views/doubts/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Doubt</h1>
+<h1 class="title is-3">Editing Doubt</h1>
 
 <%= render 'form', doubt: @doubt %>
-
-<%= link_to 'Show', @doubt %> |
-<%= link_to 'Back', doubts_path %>
