--- a/app/views/doubts/index.html.erb
+++ b/app/views/doubts/index.html.erb
@@ -1,33 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Doubts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Is resolved</th>
-      <th>Escalate count</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @doubts.each do |doubt| %>
-      <tr>
-        <td><%= doubt.title %></td>
-        <td><%= doubt.description %></td>
-        <td><%= doubt.is_resolved %></td>
-        <td><%= doubt.escalate_count %></td>
-        <td><%= link_to 'Show', doubt %></td>
-        <td><%= link_to 'Edit', edit_doubt_path(doubt) %></td>
-        <td><%= link_to 'Destroy', doubt, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Doubt', new_doubt_path %>
+<div class="columns">
+    <%= render 'shared/doubts' %>
+    <%= render 'sidebar' %>
+</div>
