--- a/app/views/doubts/show.html.erb
+++ b/app/views/doubts/show.html.erb
@@ -12,15 +12,16 @@
         <div class="level">
             <div class="level-left"></div>
             <div class="level-right">
-                <!--- Role check--->
+                <% if doubt_author(@doubt) %>
                 <div class="buttons">
                     <%= link_to 'Edit doubt', edit_doubt_path(@doubt), class:'button'%>
                     <%= button_to 'Delete', doubt_path(@doubt), method: :delete, class:'button' %>
                 </div>
+                <% end %>
                 <!--- End role check--->
             </div>
         </div>
-        <div class="content"><%= @doubt.description %></div>
+        <div class="content"><%= markdown(@doubt.description) %></div>
 
         <h2 class="subtitle is-5 has-text-grey"><%= @doubt.comments.count %> comments</h2>
 
