--- a/app/views/shared/_doubts.html.erb
+++ b/app/views/shared/_doubts.html.erb
@@ -11,7 +11,7 @@
                 <h3 class="title is-5"><%= doubt.title %></h3>
                 <% end %>
                 <div class="content">
-                    <%= truncate(strip_tags(doubt.description), length: 140) %>
+                    <%= truncate(strip_markdown(doubt.description), length: 140) %>
                     <p><em><small>Posted <%= time_ago_in_words(doubt.created_at) %> ago in
                                 <% if doubt.category %>
                                 <%= link_to doubt.category.category, doubt.category %>
@@ -23,12 +23,12 @@
                 </div>
             </div>
 
-            <!-- Todo: add user level check --->
+            <% if doubt_author(doubt) %>
             <div class="column has-text-right">
                 <%= link_to 'Edit', edit_doubt_path(doubt), class:'button' %>
                 <%# link_to 'Delete', doubt, method: :delete, data: { confirm: 'Are you sure?' }, class: "button" %>
             </div>
-
+            <% end %>
         </div>
         <% end %>
     </div>
