Raise doubt and comment completed

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -13,7 +13,7 @@
                     <%= markdown(comment.comment) %>
                 </p>
             </div>
-            <% if comment_author(comment)%>
+            <% if comment_author(comment) || has_role?(:admin)%>
             <nav class="level is-mobile">
                 <div class="level-left">
                     <a class="level-item">
