--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,27 +1,38 @@
 <div class="column is-5  is-offset-1">
     <div class="row">
-        <%= simple_form_for([@doubt, @doubt.build_answer]) do |f| %>
-        <p class="title is-3 has-text-grey-light"> Add an answer</p>
+        <%= form_for([@doubt, @doubt.build_answer]) do |f| %>
+        <p class="title is-3 has-text-grey"> Add an answer</p>
         <div class="field">
             <div class="control">
-                <%= f.input :content, required: true,  input_html: { class: 'textarea'}, wrapper: false, label: false %>
+                <%= f.text_area :content, required: true, class: 'test'%>
             </div>
         </div>
 
-        <%= f.button :submit, 'Add answer', class:'button is-info' %>
+        <%= f.submit 'Add answer', class:'btn-orange' %>
+        <hr />
+        <%= link_to 'Escalate', escalate_doubt_path(@doubt), class:'button is-danger is-light' %>
 
         <% end %>
     </div>
-    <div class='row mt50'>
-        <h3 class="title is-5 has-text-grey-light">Categories</h3>
+    <div class="row mt50">
+        <h3 class="title is-3 has-text-grey">Categories</h3>
+        <table class="table is-fullwidth">
+            <thead>
+                <tr>
+                    <th></th>
+                </tr>
+            </thead>
 
-        <ul class="list">
-            <% @categories.each do |c| %>
-            <li class="mt10"><%= link_to c.category, c %></li>
-            <% end %>
-        </ul>
+            <tbody>
+                <% @categories.each do |c| %>
+                <tr>
+                    <th>
+                        <strong><%= link_to c.category, c %></strong>
+                    </th>
 
-        <br />
-
+                </tr>
+                <% end %>
+            </tbody>
+        </table>
     </div>
 </div>
