--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,13 +1,15 @@
 <div class="column is-5 is-offset-1">
-    <%= simple_form_for([@doubt, @doubt.answer]) do |f| %>
-    <p class="title is-3"> Update answer</p>
+    <%= form_for([@doubt, @doubt.answer]) do |f| %>
+    <p class="title is-3 has-text-grey"> Update answer</p>
     <div class="field">
         <div class="control">
-            <%= f.input :content, required: true,  input_html: { class: 'textarea', style: 'white-space: pre-wrap;'}, wrapper: false, label: false %>
+            <%= f.text_area :content, required: true, class: 'test'%>
         </div>
     </div>
 
-    <%= f.button :submit, 'Update answer', class:'button is-info' %>
+    <%= f.submit 'Update answer', class:'btn-orange' %>
+    <hr />
+    <%= link_to 'Escalate', escalate_doubt_path(@doubt), class:'button is-danger is-light' %>
 
     <% end %>
 </div>
