--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,10 +2,10 @@
 
 <div class="field">
     <div class="control">
-        <%= f.input :comment, input_html: { class: 'textarea' }, wrapper: false, label_html: { class: 'label' } %>
+        <%= f.input :comment, input_html: { class: 'textarea', rows:2 }, wrapper: false, label_html: { class: 'label' } %>
     </div>
 </div>
 
-<%= f.button :submit, 'Leave a Comment', class:'button is-info' %>
+<%= f.button :submit, 'Leave a Comment', class:'btn-orange' %>
 
 <% end %>
