--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <section class="section">
     <div class="container">
         <div class="columns is-centered">
-            <div class="column is-4">
+            <div class="column is-4 pa40 has-background-light">
 
                 <h2 class="title is-2">Edit <%= resource_name.to_s.humanize %></h2>
 
@@ -27,7 +27,6 @@
                         <%= f.input :email, required: true, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
                     </div>
                 </div>
-
                 <div class="field">
                     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
                     <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
@@ -46,6 +45,9 @@
                     </div>
                 </div>
 
+
+
+
                 <div class="field">
                     <div class="control">
                         <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true, input_html: { class: "input"}, wrapper: false, label_html: { class: "label" } %>
@@ -56,8 +58,6 @@
 
                 <% end %>
 
-                <hr />
-                <h3 class="title is-5">Cancel my account</h3>
 
             </div>
         </div>
