--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -7,5 +7,5 @@
     </div>
 </div>
 
-<%= f.button :submit, 'Update Comment', class:'button is-info' %>
+<%= f.button :submit, 'Update Comment', class:'btn-orange' %>
 <% end %>
