--- a/app/views/doubts/_sidebar.html.erb
+++ b/app/views/doubts/_sidebar.html.erb
@@ -18,4 +18,7 @@
             <% end %>
         </tbody>
     </table>
+    <% if current_user && (current_user.has_role? "admin") %>
+    <%= link_to 'Add New Category', new_category_path, class:'button is-outlined' %>
+    <% end %>
 </div>
