--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,6 +18,7 @@
             <% end %>
         </h1>
         <% end  %>
+
         <div class="navbar-burger burger" data-target="navbar">
             <span></span>
             <span></span>
@@ -27,6 +28,11 @@
 
     <div id="navbar" class="navbar-menu">
         <div class="navbar-end">
+            <div class="navbar-item">
+                <div class="field is-grouped">
+                    <%= link_to 'Home', root_path , class:"button is-rounded" %>
+                </div>
+            </div>
             <% if user_signed_in? %>
             <% if current_user.student? || current_user.assistant? %>
 
