--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,12 +18,11 @@
             <% end %>
         </h1>
         <% end  %>
-
-        <div class="navbar-burger burger" data-target="navbar">
+        <a role="button" class="navbar-burger" data-target="navbar" aria-label="menu" aria-expanded="false">
             <span></span>
             <span></span>
             <span></span>
-        </div>
+        </a>
     </div>
 
     <div id="navbar" class="navbar-menu">
@@ -85,3 +84,33 @@
         </div>
     </div>
 </nav>
+
+
+<!-- Js for navabr toggle -->
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+
+        // Get all "navbar-burger" elements
+        const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+        // Check if there are any navbar burgers
+        if ($navbarBurgers.length > 0) {
+
+            // Add a click event on each of them
+            $navbarBurgers.forEach(el => {
+                el.addEventListener('click', () => {
+
+                    // Get the target from the "data-target" attribute
+                    const target = el.dataset.target;
+                    const $target = document.getElementById(target);
+
+                    // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+                    el.classList.toggle('is-active');
+                    $target.classList.toggle('is-active');
+
+                });
+            });
+        }
+
+    });
+</script>
