--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -4,7 +4,7 @@
         <p class="title is-3 has-text-grey"> Add an answer</p>
         <div class="field">
             <div class="control">
-                <%= f.text_area :content, required: true, class: 'test'%>
+                <%= f.text_area :content, required: true, class: 'answer-input'%>
             </div>
         </div>
 
