--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -3,7 +3,7 @@
     <p class="title is-3 has-text-grey"> Update answer</p>
     <div class="field">
         <div class="control">
-            <%= f.text_area :content, required: true, class: 'test'%>
+            <%= f.text_area :content, required: true, class: 'answer-input'%>
         </div>
     </div>
 
