--- a/app/views/doubts/_form.html.erb
+++ b/app/views/doubts/_form.html.erb
@@ -3,13 +3,13 @@
 
 <div class="field">
     <div class="control">
-        <%= f.input :title, required: true, input_html: { class: 'input' }, wrapper: false, label_html: { class: "label" } %>
+        <%= f.input :title, required: true, input_html: { class: 'input', required: true }, wrapper: false, label_html: { class: "label" } %>
     </div>
 </div>
 
 <div class="field">
     <div class="control">
-        <%= f.input :description, required: true, input_html: { class: 'textarea' }, wrapper: false, label_html: { class: "label" } %>
+        <%= f.input :description, required: 'required', input_html: { class: 'textarea' }, wrapper: false, label_html: { class: "label" } %>
     </div>
 </div>
 
