--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -54,7 +54,7 @@
                     </div>
                 </div>
 
-                <%= f.button :submit, "Update", class:"button is-info" %>
+                <%= f.button :submit, "Update", class:"btn-orange" %>
 
                 <% end %>
 
