--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,7 +4,7 @@
 
 
         <h1 class="title is-5">
-            <span style="color: #ee712a">CODING NINJAS</span>
+            <span style="color: #ee712a">University Doubts Forum</span>
             <%if current_user %>
             <% if current_user.has_role? "admin" %>
             | Admin
